--- a/hw14-spring_MVC/src/main/resources/WEB-INF/templates/userCreate.html
+++ b/hw14-spring_MVC/src/main/resources/WEB-INF/templates/userCreate.html
@@ -29,7 +29,7 @@
 
     <div class="row">
         <label for="holder-input">Name:</label>
-        <input id="holder-input" name="name" type="text" th:value="${user.name}" value="John Doe"/>
+        <input id="holder-input" name="name" type="text" th:value="${user.name}" placeholder="enter a user name" value="John Doe"/>
     </div>
 
     <div class="row">
